# baml

./: .dockerignore  .envrc  .gitattributes  .gitconfig  .gitignore  .infisical.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BAML-GO.md  BAML-RUST.md  CANCELLATION_TESTS_COMPLETE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEV-TOOLS.md  DEV_SETUP.md  Dockerfile  INTERNAL_FEATURE_REMOVAL_SUMMARY.md  LANGUAGE_CLIENTS_CANCELLATION_STATUS.md  PLAN-BEP-005.md  README-DEV.md  README.md  XML_Implementation_Summary.md  baml-directory-move-fix.md  baml_language.code-workspace  biome.json  codecov.yml  customer_bug_fix_summary.md  flake.nix  foo.md  go  go.mod  go.sum  header_execution_tracking.md  journal.md  justfile  mise.toml  package.json  (+17 more)
baml_language/: .gitignore  .markdown-whitelist  Cargo.toml  TEST_INSTRUCTIONS.md  bacon.toml  deny.toml  mise.toml  rust-toolchain.toml  stow.toml  test_simple.baml
baml_language/.cargo/: size-gate.toml
baml_language/.ci/size-gate/: aarch64-apple-darwin.toml  wasm32-unknown-unknown.toml  x86_64-pc-windows-msvc.toml  x86_64-unknown-linux-gnu.toml
baml_language/.claude/: settings.local.json
baml_language/architecture/: README.md  dependency-graph.json  generate.sh
baml_language/clippy-wasm/: clippy.toml
baml_language/crates/baml_base/: Cargo.toml
baml_language/crates/baml_bridge_cffi/: Cargo.toml  build.rs
baml_language/crates/baml_build_request_tests/: Cargo.toml
baml_language/crates/baml_builtins/: Cargo.toml  build.rs  legacy_projection.dsl
baml_language/crates/baml_builtins2/: Cargo.toml
baml_language/crates/baml_builtins2_codegen/: Cargo.toml
baml_language/crates/baml_builtins_codegen/: Cargo.toml
baml_language/crates/baml_builtins_macros/: Cargo.toml
baml_language/crates/baml_cli/: Cargo.toml  package.json  turbo.json
baml_language/crates/baml_codegen/: Cargo.toml
baml_language/crates/baml_codegen_python/: Cargo.toml  askama.toml
baml_language/crates/baml_codegen_tests/: Cargo.toml
baml_language/crates/baml_codegen_types/: Cargo.toml
baml_language/crates/baml_compiler2_ast/: Cargo.toml
baml_language/crates/baml_compiler2_hir/: Cargo.toml
baml_language/crates/baml_compiler2_ppir/: Cargo.toml
baml_language/crates/baml_compiler2_tir/: Cargo.toml
baml_language/crates/baml_compiler2_visualization/: Cargo.toml
baml_language/rig_tests/: README.md
baml_language/scripts/: README.md  pre-commit  validate_markdown.py
bundle-hello-world/: Cargo.toml
bundle-hello-world/baml_src/: receipt.baml
bundle-hello-world/src/: file_watcher.rs  main.rs
engine/: AGENTS.md  Cargo.toml  Cross.toml  asdf.txt  baml_repl_history.txt  mise.toml  package.json  rustfmt.toml  test_output.txt  test_simple_expr_fn.baml  turbo.json.todo
engine/.cargo/: config.toml
engine/.claude/: settings.json  settings.local.json
engine/baml-compiler/: CLAUDE.md  Cargo.toml
engine/baml-ids/: Cargo.toml
engine/baml-lsp-types/: Cargo.toml
engine/baml-rpc/: .gitignore  Cargo.toml  package.json  tsconfig.json
engine/baml-runtime/: Cargo.toml  build.rs
engine/baml-schema-wasm/: .gitignore  Cargo.toml  bacon.toml  package.json  rust-toolchain.toml  watch-build.py
engine/baml-viz-events/: Cargo.toml
engine/baml-vm/: Cargo.toml
engine/baml_cffi_macros/: Cargo.toml
engine/boundary-udf/: Cargo.toml  README.md  sample-prices.yaml
engine/bstd/: Cargo.toml
engine/btrace/: Cargo.toml
engine/cli/: .npmignore  .watchignore  Cargo.toml  package.json
engine/docs/: typed-parser-implementation.md
engine/generators/: README.md  package.json  type_serialization_tests.md
engine/language_client_cffi/: Cargo.toml  Cross.toml  Makefile.toml  README.md  build.py  build.rs  cbindgen.toml  how-cdylib-works.md
engine/language_client_codegen/: Cargo.toml  askama.toml
engine/language_client_go/: .gitignore  README_WINDOWS.md  callbacks.go  generate_checksums.sh  go.mod  go.sum  lib.go  main.go  package.json  temp-main.go
engine/language_client_python/: Cargo.toml  package.json  pyproject.toml  turbo.json
engine/language_client_ruby/: Gemfile  baml.gemspec  package.json
engine/language_client_rust/: Cargo.toml  build.rs  core-api-in-go-client.md  rust-vs-go-cffi-function-interface.md  still-missing.md
engine/language_client_typescript/: Cargo.toml  async_context_vars.d.ts  async_context_vars.d.ts.map  async_context_vars.js  audio.d.ts  audio.d.ts.map  audio.js  browser.d.ts  browser.d.ts.map  browser.js  build.rs  cli.js  errors.d.ts  errors.d.ts.map  errors.js  image.d.ts  image.d.ts.map  image.js  index.d.ts  index.d.ts.map  index.js  logging.d.ts  logging.d.ts.map  logging.js  native.d.ts  native.js  package.json  pdf.d.ts  pdf.d.ts.map  pdf.js  pnpm-lock.yaml  safe_imports.d.ts  safe_imports.d.ts.map  safe_imports.js  stream.d.ts  stream.d.ts.map  stream.js  test.ts  tsconfig.build.json  tsconfig.json  (+6 more)
engine/language_server/: .watchignore  Cargo.toml  build.rs  package.json
engine/llm-response-parser/: Cargo.toml
engine/mock-openai/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
engine/playground-server/: Cargo.toml  README.md
engine/sandbox/: Cargo.toml
engine/tools/: Cargo.toml  README.md  show_rust_lints.py
engine/zed/: .gitignore  Cargo.toml  README.md  extension.toml
integ-tests/python/: .gitignore  README.md  aws-utils.py  baml_example_tracing.py  http-server.py  memory-usage-events.json  memory-usage-timeline.json  new_trace_events_debug.json  package.json  pyproject.toml  run_tests.sh  test-dotenv
integ-tests/python-multiprocessing/: DESIGN.md  Dockerfile  FINDINGS.md  TEST.md  docker-compose.yml  main.py  pyproject.toml
integ-tests/rust/: Cargo.toml  README.md  build.rs
languages/rust/: .gitignore  Cargo.toml  release.toml  rustfmt.toml  setup-ffi.sh
tools/: bctl  build  bump-version  bump-version.py  install-hooks  lsp-write.py  pyproject.toml
tools/bctl_src/: bctl.py  integ_tests.py
tools/hooks/: pre-commit
tools/versions/: engine.cfg  go.cfg  integ-tests.cfg  jetbrains.cfg  python.cfg  ruby.cfg  rust.cfg  typescript.cfg  vscode.cfg  zed.cfg
(+7410 files in other folders)
