[workspace]
resolver = "2"
members = [
  "baml-lib/*",
  "baml-lsp-types",
  "baml-rpc",
  "baml-ids",
  "baml-runtime",
  "baml-schema-wasm",
  "bstd",
  "cli",
  "language_client_codegen",
  "language_client_python",
  "language_client_ruby/ext/ruby_ffi",
  "language_client_typescript",
  "language_server",
  "language_client_cffi",
  "generators/utils/*",
  "generators/languages/*",
  "sandbox",
  "zed",
]
default-members = [
  "baml-lsp-types",
  "baml-lib/*",
  "baml-rpc",
  "baml-ids",
  "baml-runtime",
  # Disabled by default: --features no_wasm and --features wasm are mutually exclusive
  # Building baml-schema-wasm in combination with everything else triggers feature unification,
  # and it's OK to not build this by default because we have to build ts separately (this may
  # also have something to do with resolver=2 and how duplicate dep builds are handled)
  # "baml-schema-wasm",
  "bstd",
  "cli",
  "language_client_cffi",
  "language_client_codegen",
  "language_client_python",
  "language_client_ruby/ext/ruby_ffi",
  "language_client_typescript",
  "language_server",
  "generators/utils/*",
  "generators/languages/*",
]

[workspace.dependencies]
lsp-server = { version = "0.7.6" }
lsp-types = { version = "0.95.0" }
anyhow = "1.0"
askama = { version = "0.14.0", features = ["code-in-doc"] }
baml-cli = { path = "cli" }
baml-derive = { path = "baml-lib/baml-derive" }
baml-ids = { path = "baml-ids" }
baml-rpc = { path = "baml-rpc" }
baml-types = { path = "baml-lib/baml-types" }
baml-log = { path = "baml-lib/baml-log" }
base64 = "0.22.1"
bstd = { path = "bstd" }
bytes = "1.6.0"
cfg-if = "1.0.0"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
cowstr = { version = "1.3.0", features = ["serde"] }
dashmap = "5.5.3"
derive-new = "0.7"
derive_builder = "0.20.0"
derive_more = { version = "0.99.18", features = ["constructor"] }
either = "1.8.1"
env_logger = "0.11.3"
futures = { version = "0.3.30", features = ["executor"] }
http = "1.1.0"
http-body = "1.0.0"
indexmap = { version = "2.1.0", features = ["serde"] }
indoc = "2.0.5"
internal-baml-codegen = { path = "language_client_codegen" }
internal-baml-core = { path = "baml-lib/baml-core" }
internal-baml-jinja = { path = "baml-lib/jinja-runtime" }
internal-llm-client = { path = "baml-lib/llm-client" }
baml-lsp-types = { path = "baml-lsp-types" }
jsonish = { path = "baml-lib/jsonish" }
log = "0.4.20"
# TODO: disable imports, etc
minijinja = { version = "2.10.2", default-features = false, features = [
  "macros",
  "builtins",
  "debug",
  "preserve_order",
  "adjacent_loop_items",
  "unicode",
  "json",
  "unstable_machinery",
  "unstable_machinery_serde",
  "custom_syntax",
  "internal_debug",
  "deserialization",
  "serde",
  # We don't want to use these features:
  # multi_template
  # loader
  #
] }
once_cell = "1"
pretty_assertions = "1.4.1"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.12", features = [
  "json",
  "native-tls-alpn",
  "native-tls-vendored",
  "stream",
] }
scopeguard = "1.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_yaml = "0.9.34"
static_assertions = "1.1.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
thiserror = "2.0.12"
time = { version = "0.3.36", features = ["formatting"] }
tracing-core = { version = "0.1.31" }
pin-project-lite = "0.2.14"
url = "2.5.2"
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }
walkdir = "2.5.0"
web-time = "1.1.0"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "time",
] }

[workspace.package]
version = "0.91.0"
authors = ["Boundary <contact@boundaryml.com>"]

description = "BAML Toolchain"
license-file = "LICENSE"

[workspace.metadata.workspaces]
allow_branch = "canary"

[profile.dev]
lto = false

[profile.dev2]
inherits = "dev"

[profile.release]
lto = true
