[workspace]
resolver = "2"
members = [
  "baml-compiler",
  "baml-viz-events",
  "baml-lib/*",
  "baml-lsp-types",
  "baml-rpc",
  "baml-ids",
  "baml-runtime",
  "baml-schema-wasm",
  "baml-vm",
  "bstd",
  "cli",
  "tools",
  "language_client_python",
  # "language_client_ruby/ext/ruby_ffi",
  "language_client_typescript",
  "language_server",
  "language_client_cffi",
  "llm-response-parser",
  "generators/utils/*",
  "generators/languages/*",
  "sandbox",
  "boundary-udf",
  "playground-server",
]
default-members = [
  "baml-compiler",
  "baml-lsp-types",
  "baml-lib/*",
  "baml-rpc",
  "baml-viz-events",
  "baml-ids",
  "baml-runtime",
  # Disabled by default: --features no_wasm and --features wasm are mutually exclusive
  # Building baml-schema-wasm in combination with everything else triggers feature unification,
  # and it's OK to not build this by default because we have to build ts separately (this may
  # also have something to do with resolver=2 and how duplicate dep builds are handled)
  # "baml-schema-wasm",
  "baml-vm",
  "bstd",
  "cli",
  "language_client_cffi",
  "language_client_python",
  "language_client_typescript",
  "language_server",
  "generators/utils/*",
  "generators/languages/*",
]

[workspace.dependencies]
anyhow = "1.0"
askama = { version = "0.14.0", features = ["code-in-doc"] }
axum = "0.7.5"
baml-cli = { path = "cli" }
baml-derive = { path = "baml-lib/baml-derive" }
baml-ids = { path = "baml-ids" }
baml-rpc = { path = "baml-rpc" }
baml-types = { path = "baml-lib/baml-types" }
baml-log = { path = "baml-lib/baml-log" }
baml-viz-events = { path = "baml-viz-events" }
base64 = "0.22.1"
bstd = { path = "bstd" }
bytes = "1.6.0"
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
colored = { version = "2.1.0" }
console_log = "1"
cowstr = { version = "1.3.0", features = ["serde"] }
dashmap = "5.5.3"
derive-new = "0.7"
derive_builder = "0.20.0"
derive_more = { version = "0.99.18", features = ["constructor"] }
dissimilar = "1.0.9"
dunce = "1.0.4"
either = "1.8.1"
enum_dispatch = "0.3.13"
enumflags2 = "0.7"
env_logger = "0.11.3"
eventsource-stream = "0.2.3"
expect-test = "1.5.0"
filetime = "0.2.25"
futures = { version = "0.3.30", features = ["executor"] }
google-cloud-auth = "1.0.0"
http = "1.1.0"
http-body = "1.0.0"
indexmap = { version = "2.1.0", features = ["serde"] }
indoc = "2.0.5"
internal-baml-core = { path = "baml-lib/baml-core" }
internal-baml-jinja = { path = "baml-lib/jinja-runtime" }
playground-server = { path = "playground-server" }
internal-llm-client = { path = "baml-lib/llm-client" }
itertools = "0.14.0"
jsonish = { path = "baml-lib/jsonish" }
log = "0.4.20"
# TODO: disable imports, etc
# minijinja = { path = "../third_party/minijinja/minijinja", default-features = false, features = [
minijinja = { git = "https://github.com/boundaryml/minijinja.git", branch = "main", default-features = false, features = [
  "macros",
  "builtins",
  "debug",
  "preserve_order",
  "adjacent_loop_items",
  "unicode",
  "json",
  "unstable_machinery",
  "unstable_machinery_serde",
  "custom_syntax",
  "internal_debug",
  "deserialization",
  "serde",
  # We don't want to use these features:
  # multi_template
  # loader
  #
] }
once_cell = "1"
pathdiff = "0.2.2"
pest = "2.8.1"
pest_derive = "2.8.1"
pretty = "0.12.4"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.5"
regex = "1.10.4"
rstest = "0.22.0"
reqwest = { version = "0.12.12", features = [
  "json",
  "native-tls-alpn",
  "native-tls-vendored",
  "stream",
] }
scopeguard = "1.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
semver = "1.0.23"
serial_test = "3.1"
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_yaml = "0.9.34"
static_assertions = "1.1.0"
strip-ansi-escapes = "0.2.0"
strsim = "0.11.1"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
sugar_path = "1.2.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
test-log = "0.2.16"
textwrap = "0.16.0"
thiserror = "2.0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
time = { version = "0.3.36", features = ["formatting"] }
tracing = "0.1"
tracing-core = { version = "0.1.31" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pin-project-lite = "0.2.14"
url = "2.5.2"
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }
walkdir = "2.5.0"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "time",
] }

js-sys = "=0.3.82"
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-test = "0.3.45"
web-sys = { version = "0.3.78", features = [
  "Crypto",
  "CryptoKey",
  "Headers",
  "Request",
  "RequestInit",
  "Response",
  "RequestMode",
  "SubtleCrypto",
  "Window",
] }
web-time = "1.1.0"
tsify = { version = "0.5.6", features = ["js"] }


[workspace.package]
version = "0.215.1"
authors = ["Boundary <contact@boundaryml.com>"]

description = "BAML Toolchain"
license-file = "LICENSE"

[workspace.metadata.crane]
name = "baml-workspace"

[workspace.metadata.workspaces]
allow_branch = "canary"

[profile.dev]
lto = false

[profile.dev2]
inherits = "dev"

[profile.release]
lto = true
