[package]
edition = "2021"
name = "baml-compiler"
version.workspace = true
authors.workspace = true
description = "BAML Bytecode Compiler"
license-file.workspace = true

[dependencies]
baml-types = { path = "../baml-lib/baml-types" }
internal-baml-ast = { path = "../baml-lib/ast" }
internal-baml-core = { path = "../baml-lib/baml-core" }
internal-baml-diagnostics = { path = "../baml-lib/diagnostics" }
internal-baml-parser-database = { path = "../baml-lib/parser-database" }
baml-vm = { path = "../baml-vm" }
anyhow = { workspace = true }
pretty = "0.12.3"
