[package]
edition = "2021"
name = "baml-compiler"
version.workspace = true
authors.workspace = true
description = "BAML Bytecode Compiler"
license-file.workspace = true

[dependencies]
anyhow = { workspace = true }
baml-types = { path = "../baml-lib/baml-types" }
baml-vm = { path = "../baml-vm" }
baml-viz-events = { path = "../baml-viz-events" }
internal-baml-ast = { path = "../baml-lib/ast" }
internal-baml-diagnostics = { path = "../baml-lib/diagnostics" }
internal-baml-parser-database = { path = "../baml-lib/parser-database" }
itertools = { workspace = true }
log = { workspace = true }
pretty = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
