[package]
edition = "2021"
name = "baml-ids"
version = "0.0.1"
authors.workspace = true
license-file.workspace = true
description = "Typesafe IDs for BAML backends and runtime"

[package.metadata.rustflags]
RSTEST_TIMEOUT = "10"

[lints.rust]
dead_code = "deny"
elided_named_lifetimes = "deny"
unused_imports = "deny"
unused_variables = "deny"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
type-safe-id = "=0.3.2"
uuid = { workspace = true, features = ["js"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

