[package]
edition = "2021"
name = "baml-lsp-types"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[lints.rust]
elided_named_lifetimes = "deny"

[dependencies]
anyhow.workspace = true
baml-runtime = { path = "../baml-runtime", features = [
  "internal",
], default-features = false }
baml-types = { path = "../baml-lib/baml-types" }
cfg-if.workspace = true
indexmap.workspace = true
internal-baml-core.workspace = true
jsonish = { path = "../baml-lib/jsonish" }
internal-llm-client = { path = "../baml-lib/llm-client" }
js-sys.workspace = true
log.workspace = true
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde.workspace = true
serde_json.workspace = true
time.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4", "js"] }
web-time.workspace = true
either = "1.8.1"
itertools = "0.13.0"
once_cell.workspace = true

[dev-dependencies]
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
walkdir = "2.5.0"


# [profile.release]
# debug = true
